force-app/main/default/objects/Insolvency__c/Insolvency__c.object-meta.xml
<CustomObject>
    <description>This custom object represents the Insolvency information.</description>
    <label>Insolvency</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Estate Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insolvencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>