force-app/main/default/objects/Insolvency__c/fields/Acceleration_Clause__c.field-meta.xml
<CustomField>
    <fullName>Acceleration_Clause__c</fullName>
    <description>Acceleration Clause</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Acceleration Clause</inlineHelpText>
    <label>Acceleration Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>