force-app/main/default/objects/Insolvency__c/fields/Acceptable_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Monthly_Payment__c</fullName>
    <inlineHelpText>Acceptable Monthly Payment?</inlineHelpText>
    <label>Acceptable Monthly Payment?</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>