force-app/main/default/objects/Insolvency__c/fields/Accounts_Needing_Validation_Scotia__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Needing_Validation_Scotia__c</fullName>
    <description>Number of Accounts Needing Validation Scotia Rollup Summery field</description>
    <inlineHelpText>Number of Accounts Needing Validation Scotia Rollup Summery field</inlineHelpText>
    <label>RL Accounts Needing Validation Scotia</label>
    <summarizedField>Insolvency_Detail__c.Number_of_Accounts_Needing_Validation__c</summarizedField>
    <summaryFilterItems>
        <field>Insolvency_Detail__c.Bank_Name__c</field>
        <operation>equals</operation>
        <value>Scotia Bank</value>
    </summaryFilterItems>
    <summaryForeignKey>Insolvency_Detail__c.Insolvency__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>