force-app/main/default/objects/Insolvency__c/fields/Accounts_Needing_Validation_SDA__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Needing_Validation_SDA__c</fullName>
    <description>RL Accounts Needing Validation SDA</description>
    <inlineHelpText>RL Accounts Needing Validation SDA</inlineHelpText>
    <label>RL Accounts Needing Validation SDA</label>
    <summarizedField>Insolvency_Detail__c.Number_of_Accounts_Needing_Validation__c</summarizedField>
    <summaryFilterItems>
        <field>Insolvency_Detail__c.Bank_Name__c</field>
        <operation>equals</operation>
        <value>SDA</value>
    </summaryFilterItems>
    <summaryForeignKey>Insolvency_Detail__c.Insolvency__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>