force-app/main/default/objects/Insolvency__c/fields/Address_of_Financial_Advisor_Debtor1__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Financial_Advisor_Debtor1__c</fullName>
    <description>Address of the firm/organization noted at 7.3</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Address of the firm/organization noted at 7.3</inlineHelpText>
    <label>Address of Financial Advisor</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>