force-app/main/default/objects/Insolvency__c/fields/Adjusted_Unsecured_Amount_Frml__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Unsecured_Amount_Frml__c</fullName>
    <description>Adjusted Unsecured Amount</description>
    <formula>Total_Unsecured_Liabilities_Clc__c - Secured_Debts_Unsecured_Portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Adjusted Unsecured Amount</inlineHelpText>
    <label>Adjusted Unsecured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>