force-app/main/default/objects/Insolvency__c/fields/Adjusted_Unsecured_Debt__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Unsecured_Debt__c</fullName>
    <inlineHelpText>Adjusted Unsecured Debt</inlineHelpText>
    <label>Adjusted Unsecured Debt</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>