force-app/main/default/objects/Insolvency__c/fields/Alcohol_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Expenses__c</fullName>
    <description>Alcohol Expenses</description>
    <inlineHelpText>Alcohol Expenses</inlineHelpText>
    <label>Alcohol Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>