force-app/main/default/objects/Insolvency__c/fields/Allow_Insolvency_Date_In_Past__c.field-meta.xml
<CustomField>
    <fullName>Allow_Insolvency_Date_In_Past__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Insolvency Date In Past</description>
    <inlineHelpText>Allow Insolvency Date In Past</inlineHelpText>
    <label>Allow Insolvency Date In Past</label>
    <type>Checkbox</type>
</CustomField>