force-app/main/default/objects/Insolvency__c/fields/Allowances_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Allowances_Expenses__c</fullName>
    <description>Allowances Expenses</description>
    <inlineHelpText>Allowances Expenses</inlineHelpText>
    <label>Allowances Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>