force-app/main/default/objects/Insolvency__c/fields/Amount_Bankrupt_will_pay_to_repurchase__c.field-meta.xml
<CustomField>
    <fullName>Amount_Bankrupt_will_pay_to_repurchase__c</fullName>
    <description>Amount Bankrupt/Debtor has agreed to pay to repurchase assets</description>
    <inlineHelpText>Amount Bankrupt/Debtor has agreed to pay to repurchase assets</inlineHelpText>
    <label>Amount to repurchase assets</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>