force-app/main/default/objects/Insolvency__c/fields/Auto_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved_Reason__c</fullName>
    <description>This field is used in the voting engine when the insolvency date is less than 45 days then this field is populated with its value.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used in the voting engine when the insolvency date is less than 45 days then this field is populated with its value.</inlineHelpText>
    <label>Auto Approved Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>