force-app/main/default/objects/Insolvency__c/fields/Available_Monthly_Income_Of_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Available_Monthly_Income_Of_Debtor__c</fullName>
    <description>Available Monthly Income Of Debtor</description>
    <inlineHelpText>Available Monthly Income Of Debtor</inlineHelpText>
    <label>Available Monthly Income Of Debtor</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>