force-app/main/default/objects/Insolvency__c/fields/Available_Monthly_Income_Of_Debtor_Frml__c.field-meta.xml
<CustomField>
    <fullName>Available_Monthly_Income_Of_Debtor_Frml__c</fullName>
    <description>Available Monthly Income Of Debtor Formula</description>
    <formula>Total_Monthly_Income_Debtor_Frml__c - Total_Non_Discretionary_Exp_Debtor_Frml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available Monthly Income Of Debtor Formula</inlineHelpText>
    <label>Available Monthly Income Of Debtor Frml</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>