force-app/main/default/objects/Insolvency__c/fields/Available_Monthly_Income_Of_Family__c.field-meta.xml
<CustomField>
    <fullName>Available_Monthly_Income_Of_Family__c</fullName>
    <description>Available Monthly Income Of Family</description>
    <inlineHelpText>Available Monthly Income Of Family</inlineHelpText>
    <label>Available Monthly Income Of Family</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>