force-app/main/default/objects/Insolvency__c/fields/Available_Monthly_Income_Of_Family_Frml__c.field-meta.xml
<CustomField>
    <fullName>Available_Monthly_Income_Of_Family_Frml__c</fullName>
    <description>Available Monthly Income Of Family Formula</description>
    <formula>Total_Monthly_Income_Of_Family_Frml__c - Total_Non_Discretionary_Exp_Family_Frml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available Monthly Income Of Family Formula</inlineHelpText>
    <label>Available Monthly Income Of Family Frml</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>