force-app/main/default/objects/Insolvency__c/fields/BK_Duration__c.field-meta.xml
<CustomField>
    <fullName>BK_Duration__c</fullName>
    <inlineHelpText>BK Duration</inlineHelpText>
    <label>BK Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>