force-app/main/default/objects/Insolvency__c/fields/BK_Net_Payout__c.field-meta.xml
<CustomField>
    <fullName>BK_Net_Payout__c</fullName>
    <inlineHelpText>BK Net Payout</inlineHelpText>
    <label>BK Net Payout</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>