force-app/main/default/objects/Insolvency__c/fields/BK_Net_Payout_AR__c.field-meta.xml
<CustomField>
    <fullName>BK_Net_Payout_AR__c</fullName>
    <description>BK Net Payout Adjusted Return</description>
    <inlineHelpText>BK Net Payout Adjusted Return</inlineHelpText>
    <label>BK Net Payout AR</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>