force-app/main/default/objects/Insolvency__c/fields/Cable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Cable_Expenses__c</fullName>
    <description>Cable Expenses</description>
    <inlineHelpText>Cable Expenses</inlineHelpText>
    <label>Cable Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>