force-app/main/default/objects/Insolvency__c/fields/Calculated_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Proposal__c</fullName>
    <description>Calculated Proposal</description>
    <inlineHelpText>Calculated Proposal</inlineHelpText>
    <label>Calculated Proposal</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>