force-app/main/default/objects/Insolvency__c/fields/Canaccede_Data_Captured_Date__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Data_Captured_Date__c</fullName>
    <description>Canaccede Data Captured Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canaccede Data Captured Date</inlineHelpText>
    <label>Canaccede Data Captured Date</label>
    <type>DateTime</type>
</CustomField>