force-app/main/default/objects/Insolvency__c/fields/Canaccede_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Date_of_Birth__c</fullName>
    <description>Canaccede Date of Birth</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canaccede Date of Birth</inlineHelpText>
    <label>Canaccede Date of Birth</label>
    <type>Date</type>
</CustomField>