force-app/main/default/objects/Insolvency__c/fields/Canaccede_Email__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Email__c</fullName>
    <description>Canaccede Email</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canaccede Email</inlineHelpText>
    <label>Canaccede Email</label>
    <type>Email</type>
</CustomField>