force-app/main/default/objects/Insolvency__c/fields/Canaccede_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Mobile_Phone__c</fullName>
    <description>Canaccede Mobile Phone</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canaccede Mobile Phone</inlineHelpText>
    <label>Canaccede Mobile Phone</label>
    <type>Phone</type>
</CustomField>