force-app/main/default/objects/Insolvency__c/fields/Canadian_Tire_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Tire_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canadian Tire Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CanadianTireRecordOwner</relationshipName>
    <type>Lookup</type>
</CustomField>