force-app/main/default/objects/Insolvency__c/fields/Car_Lease_Payments_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Car_Lease_Payments_Expenses__c</fullName>
    <description>Car Lease Payments Expenses</description>
    <inlineHelpText>Car Lease Payments Expenses</inlineHelpText>
    <label>Car Lease Payments Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>