force-app/main/default/objects/Insolvency__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Case Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Case Number</inlineHelpText>
    <label>Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>