force-app/main/default/objects/Insolvency__c/fields/Chase_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Chase_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chase Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChaseRecordOwner</relationshipName>
    <type>Lookup</type>
</CustomField>