force-app/main/default/objects/Insolvency__c/fields/Child_Tax_Benefit_Other__c.field-meta.xml
<CustomField>
    <fullName>Child_Tax_Benefit_Other__c</fullName>
    <description>Child Tax Benefit  Other</description>
    <inlineHelpText>Child Tax Benefit  Other</inlineHelpText>
    <label>Child Tax Benefit  Other</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>