force-app/main/default/objects/Insolvency__c/fields/Client_Identifiers__c.field-meta.xml
<CustomField>
    <fullName>Client_Identifiers__c</fullName>
    <description>Populated when a new Insolvency Account record is created for the Insolvency record. 
Clients can only see records in this Object if their client identifier value is present in this field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Populated when a new Insolvency Account record is created for the Insolvency record. 
Clients can only see records in this Object if their client identifier value is present in this field.</inlineHelpText>
    <label>Client Identifiers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>