force-app/main/default/objects/Insolvency__c/fields/Clothing_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Expenses__c</fullName>
    <description>Clothing Expenses</description>
    <inlineHelpText>Clothing Expenses</inlineHelpText>
    <label>Clothing Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>