force-app/main/default/objects/Insolvency__c/fields/Co_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Co_Debtor__c</fullName>
    <description>Name of the co-debtor</description>
    <formula>Debtor_2_First_Name__c + &apos; &apos; + Debtor_2_Last_Name__c</formula>
    <inlineHelpText>Name of the co-debtor</inlineHelpText>
    <label>Co-Debtor</label>
    <type>Text</type>
</CustomField>