force-app/main/default/objects/Insolvency__c/fields/Co_Debtor_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Co_Debtor_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To flag a Co-debtor as deceased</inlineHelpText>
    <label>Co-Debtor Deceased</label>
    <type>Checkbox</type>
</CustomField>