force-app/main/default/objects/Insolvency__c/fields/Counter_With_BK_Instead_Of_CP__c.field-meta.xml
<CustomField>
    <fullName>Counter_With_BK_Instead_Of_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Counter With BK Instead Of CP?</inlineHelpText>
    <label>Counter With BK Instead Of CP?</label>
    <type>Checkbox</type>
</CustomField>