force-app/main/default/objects/Insolvency__c/fields/Counteroffer_Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Counteroffer_Number_of_Payments__c</fullName>
    <description>Track the FINAL counteroffer submitted to the Trustee when a vote against a proposal is cast.</description>
    <inlineHelpText>Track the FINAL counteroffer submitted to the Trustee when a vote against a proposal is cast.</inlineHelpText>
    <label>Counteroffer Number of Payments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>