force-app/main/default/objects/Insolvency__c/fields/Counteroffer_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Counteroffer_Payment_Amount__c</fullName>
    <description>Track the FINAL counteroffer submitted to the Trustee when a vote against a proposal is cast.</description>
    <inlineHelpText>Track the FINAL counteroffer submitted to the Trustee when a vote against a proposal is cast.</inlineHelpText>
    <label>Counteroffer Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>