force-app/main/default/objects/Insolvency__c/fields/Court_District_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_District_Name__c</fullName>
    <description>The name of the court district as found in the creditor&apos;s package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the court district as found in the creditor&apos;s package</inlineHelpText>
    <label>Court District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>