force-app/main/default/objects/Insolvency__c/fields/Court_Division_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_Division_Number__c</fullName>
    <description>The court division number as noted on the creditor’s package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The court division number as noted on the creditor’s package</inlineHelpText>
    <label>Court Division Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>