force-app/main/default/objects/Insolvency__c/fields/Court_Province_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_Province_Name__c</fullName>
    <description>The province of the court as found in the creditor&apos;s package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The province of the court as found in the creditor&apos;s package</inlineHelpText>
    <label>Court Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>