force-app/main/default/objects/Insolvency__c/fields/CP_Net_Payout__c.field-meta.xml
<CustomField>
    <fullName>CP_Net_Payout__c</fullName>
    <label>CP Net Payout</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>