force-app/main/default/objects/Insolvency__c/fields/CP_Net_Payout_TR__c.field-meta.xml
<CustomField>
    <fullName>CP_Net_Payout_TR__c</fullName>
    <description>CP Net Payout Total Return</description>
    <inlineHelpText>CP Net Payout Total Return</inlineHelpText>
    <label>CP Net Payout TR</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>