force-app/main/default/objects/Insolvency__c/fields/Created_By_Doc_Parser__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Doc_Parser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks whether the record is created by Document parser or not</description>
    <inlineHelpText>Checks whether the record is created by Document parser or not</inlineHelpText>
    <label>Created By Doc Parser</label>
    <type>Checkbox</type>
</CustomField>