force-app/main/default/objects/Insolvency__c/fields/Creditor_Payout__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Payout__c</fullName>
    <description>The calculated payout for all creditors for this insolvency, net superintendant and trustee fees</description>
    <formula>CASE(Insolvency_Type__c,

&quot;Consumer Proposal&quot;, ((
(
Payment_Amount__c * Number_of_Payments__c
) 
+ Bulk_Payment_Amount__c - Trustee_Fees__c
) 
* 
(
1 - $Setup.Trustee_Fees__c.Superintendant_Variable_Fee_Rate__c
)),

&quot;Division 1 Proposal&quot;, ((
(
Payment_Amount__c * Number_of_Payments__c
) 
+ Bulk_Payment_Amount__c - Trustee_Fees__c
) 
* 
(
1 - $Setup.Trustee_Fees__c.Superintendant_Variable_Fee_Rate__c
)),
&quot;Bankruptcy&quot;,0,

NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated payout for all creditors for this insolvency, net superintendant and trustee fees</inlineHelpText>
    <label>Creditor Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>