force-app/main/default/objects/Insolvency__c/fields/Date_Of_Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_Year__c</fullName>
    <description>Display year from date of birth</description>
    <label>Date Of Birth Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>