force-app/main/default/objects/Insolvency__c/fields/Death_Clause__c.field-meta.xml
<CustomField>
    <fullName>Death_Clause__c</fullName>
    <description>Death Clause</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Death Clause</inlineHelpText>
    <label>Death Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>