force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Alias_Name__c</fullName>
    <description>The primary debtor&apos;s alias name(s), if any.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary debtor&apos;s alias name(s), if any.</inlineHelpText>
    <label>Alias(es)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>