force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Court_Number__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Court_Number__c</fullName>
    <description>The court number for the primary debtor as noted on the creditor’s package.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The court number for the primary debtor as noted on the creditor’s package.</inlineHelpText>
    <label>Court Number</label>
    <length>110</length>
    <type>Text</type>
</CustomField>