force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Date_of_Birth__c</fullName>
    <description>Date of Birth of the primary filer</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Date of Birth of the primary filer</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>