force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Employer_City__c</fullName>
    <description>The address city of the primary debtor&apos;s employer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The address city of the primary debtor&apos;s employer.</inlineHelpText>
    <label>Employer City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>