force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Employer_Name__c</fullName>
    <description>The name of the primary debtor&apos;s employer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the primary debtor&apos;s employer.</inlineHelpText>
    <label>Employer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>