force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Employer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Employer_Postal_Code__c</fullName>
    <description>The address postal code of the primary debtor&apos;s employer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The address postal code of the primary debtor&apos;s employer.</inlineHelpText>
    <label>Employer Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>